src/test/ui/wf/wf-in-fn-arg.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-fn-arg.rs:10:1
   |
LL |   struct MustBeCopy<T:Copy> {
   |   ------------------------- required by `MustBeCopy`
...
LL | / fn bar<T>(_: &MustBeCopy<T>)
LL | | {
LL | | }
   | |_^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
